--- a/index.html
+++ b/index.html
@@ -1,158 +1,280 @@
-<!-- Include fonts in your <head> -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Football Fucking Homepage</title>
+  <style>
+    body { font-family: Arial, Helvetica, sans-serif; background:#eee; color:#1e2227; margin:0; padding:0;}
+    h1 { font-size:2rem; margin-top:2rem; margin-bottom:0.5rem; text-align:center; }
+    h2 { font-size:1.2rem; font-weight:normal; text-align:center; margin-top:0; margin-bottom:2rem;}
+    h4 { margin-top:2.5rem; margin-bottom:0.3rem; letter-spacing:0.04em; }
+    .category { margin: 0 auto 2.5rem auto; max-width: 620px; background: #fff; box-shadow:0 4px 16px 0 rgba(0,0,0,0.03); border-radius:8px; padding: 18px 30px;}
+    .label { color: #b17d16; font-size:0.94em; }
+    a { color: #1771d6; text-decoration:underline; }
+    @media (max-width: 700px) {
+      .category { max-width: 98vw; padding: 12px 2vw; }
+    }
+  </style>
+</head>
+<body>
+  <h1 id="date"></h1>
+  <h2 id="fucking-day"></h2>
 
-<style>
-.main-sections {
-  display: flex;
-  gap: 2rem;
-  max-width: 1150px;
-  margin: 0 auto;
-  justify-content: center;
-}
-
-.card {
-  background: #fff;
-  border-radius: 7px;
-  box-shadow: 0 2px 16px 0 rgba(36,48,73,0.09);
-  overflow: hidden;
-  flex: 1 1 500px;
-  min-width: 380px;
-  max-width: 520px;
-  display: flex;
-  flex-direction: column;
-  border: 1.5px solid #efefef;
-}
-
-.card-img-wrap {
-  position: relative;
-  width: 100%;
-}
-
-.card-img {
-  width: 100%;
-  aspect-ratio: 16/8;
-  object-fit: cover;
-  background: #e4e7ec;
-  display: block;
-}
-
-.card-label {
-  font-size: 0.99em;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.06em;
-  color: #fff;
-  background: #191919;
-  padding: 5px 13px;
-  border-radius: 3px;
-  position: absolute;
-  top: 18px;
-  left: 18px;
-  z-index: 2;
-  box-shadow: 0 2px 10px 0 rgba(0,0,0,0.09);
-}
-
-.card-label.green {
-  background: #14a064;
-}
-
-/* Card content and typography styles */
-.card-content {
-  padding: 25px 32px 34px 32px;
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-}
-
-.card-title {
-  font-family: 'Playfair Display', serif;
-  font-size: 2.1rem;
-  font-weight: 700;
-  margin: 0.22em 0 0.31em 0;
-  letter-spacing: -0.01em;
-  color: #18191b;
-}
-
-.card-desc {
-  color: #555e62;
-  font-size: 1.13em;
-  margin-bottom: 2.3em;
-  line-height: 1.55;
-}
-
-.card-info-top {
-  color: #159c60;
-  font-size: 1em;
-  font-weight: 600;
-  margin-right: 10px;
-}
-
-.card-subtle {
-  color: #7f8893;
-  font-size: 0.97em;
-  font-weight: 500;
-  margin-bottom: 9px;
-  text-transform: uppercase;
-  letter-spacing: 0.06em;
-}
-
-.card-highlights {
-  color: #18191b;
-  font-size: 1.07em;
-  font-weight: 600;
-  margin-top: 3px;
-  line-height: 1.45;
-}
-
-.card-info {
-  color: #151f29;
-  font-size: 1.06em;
-  font-weight: 700;
-  margin-top: 2px;
-}
-.card-hr {
-  border: none;
-  border-top: 1px solid #e6e7ef;
-  margin: 0.8em 0 1.1em 0;
-}
-</style>
-
-<section class="main-sections">
-  <!-- Legend of the Day -->
-  <div class="card">
-    <div class="card-img-wrap">
-      <div class="card-label">Legend of the Day</div>
-      <img class="card-img" src="https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=800&q=80" alt="Johan Cruyff">
-    </div>
-    <div class="card-content">
-      <div class="card-title">Johan Cruyff</div>
-      <div class="card-desc">
-        The architect of Total Football, Cruyff was a visionary player and coach who changed the game forever. His intelligence, technique, and leadership made him one of the most influential figures in football history.
-      </div>
-      <hr class="card-hr">
-      <div class="card-subtle">Career Highlights</div>
-      <div class="card-highlights">
-        3x Ballon d'Or Winner &bull; 1974 World Cup Runner-up &bull; 9x Eredivisie Champion
-      </div>
-    </div>
+  <div class="category">
+    <div class="label">FOOTBALL LEGEND OF THE DAY:</div>
+    <div id="legend"></div>
+  </div>
+  <div class="category">
+    <div class="label">STADIUM OF THE DAY:</div>
+    <div id="stadium"></div>
+  </div>
+  <div class="category">
+    <div class="label">DAILY TRIVIA QUESTION:</div>
+    <div id="trivia"></div>
+  </div>
+  <div class="category">
+    <div class="label">LIFE-CHANGING GEAR OF THE DAY:</div>
+    <div id="gear"></div>
+  </div>
+  <div class="category">
+    <div class="label">STUFF YOU DIDN'T KNOW YOU NEED:</div>
+    <div id="stuff"></div>
+  </div>
+  <div class="category">
+    <div class="label">FAN GEAR OF THE DAY:</div>
+    <div id="fangear"></div>
   </div>
 
-  <!-- Stadium of the Day -->
-  <div class="card">
-    <div class="card-img-wrap">
-      <div class="card-label green">Stadium of the Day</div>
-      <img class="card-img" src="https://images.unsplash.com/photo-1502052982179-502a5e2b9e10?auto=format&fit=crop&w=800&q=80" alt="Camp Nou">
-    </div>
-    <div class="card-content">
-      <div class="card-title">Camp Nou</div>
-      <div class="card-desc">
-        <span class="card-info-top">&#9679; Barcelona, Spain</span>
-        The largest stadium in Europe and home to FC Barcelona, Camp Nou is a cathedral of football. Its electric atmosphere and rich history make it one of the most iconic venues in world football.
-      </div>
-      <hr class="card-hr">
-      <div class="card-subtle">Capacity</div>
-      <div class="card-info">99,354 fans</div>
-    </div>
-  </div>
-</section>
+  <script>
+    // --- DETERMINISTIC PICKER ---
+    function pickDailyRandom(arr, category) {
+      if (arr.length === 0) return null;
+      const today = new Date();
+      const dateStr = today.getFullYear() + String(today.getMonth()+1).padStart(2, '0') + String(today.getDate()).padStart(2, '0');
+      let hash = 0;
+      const seed = category + dateStr;
+      for (let i = 0; i < seed.length; i++) {
+        hash = (hash << 5) - hash + seed.charCodeAt(i);
+        hash |= 0;
+      }
+      const idx = Math.abs(hash) % arr.length;
+      return arr[idx];
+    }
+
+    // ==== 1. FOOTBALL LEGENDS ====
+    const footballLegends = [
+      { name: "Pelé", url: "https://en.wikipedia.org/wiki/Pel%C3%A9" },
+      { name: "Diego Maradona", url: "https://en.wikipedia.org/wiki/Diego_Maradona" },
+      { name: "Lionel Messi", url: "https://en.wikipedia.org/wiki/Lionel_Messi" },
+      { name: "Cristiano Ronaldo", url: "https://en.wikipedia.org/wiki/Cristiano_Ronaldo" },
+      { name: "Zinedine Zidane", url: "https://en.wikipedia.org/wiki/Zinedine_Zidane" },
+      { name: "Johan Cruyff", url: "https://en.wikipedia.org/wiki/Johan_Cruyff" },
+      { name: "George Best", url: "https://en.wikipedia.org/wiki/George_Best" },
+      { name: "Lev Yashin", url: "https://en.wikipedia.org/wiki/Lev_Yashin" },
+      { name: "Franz Beckenbauer", url: "https://en.wikipedia.org/wiki/Franz_Beckenbauer" },
+      { name: "Ronaldo Nazário", url: "https://en.wikipedia.org/wiki/Ronaldo_(Brazilian_footballer)" },
+      { name: "Ronaldinho", url: "https://en.wikipedia.org/wiki/Ronaldinho" },
+      { name: "David Beckham", url: "https://en.wikipedia.org/wiki/David_Beckham" },
+      { name: "Gianluigi Buffon", url: "https://en.wikipedia.org/wiki/Gianluigi_Buffon" },
+      { name: "Roberto Baggio", url: "https://en.wikipedia.org/wiki/Roberto_Baggio" },
+      { name: "Andrés Iniesta", url: "https://en.wikipedia.org/wiki/Andr%C3%A9s_Iniesta" },
+      { name: "Paolo Maldini", url: "https://en.wikipedia.org/wiki/Paolo_Maldini" },
+      { name: "Xavi", url: "https://en.wikipedia.org/wiki/Xavi" },
+      { name: "Alfredo Di Stéfano", url: "https://en.wikipedia.org/wiki/Alfredo_Di_St%C3%A9fano" },
+      { name: "Garrincha", url: "https://en.wikipedia.org/wiki/Garrincha" },
+      { name: "Romário", url: "https://en.wikipedia.org/wiki/Rom%C3%A1rio" },
+      { name: "Marco van Basten", url: "https://en.wikipedia.org/wiki/Marco_van_Basten" },
+      { name: "Thierry Henry", url: "https://en.wikipedia.org/wiki/Thierry_Henry" },
+      { name: "Kaká", url: "https://en.wikipedia.org/wiki/Kak%C3%A1" },
+      { name: "Didier Drogba", url: "https://en.wikipedia.org/wiki/Didier_Drogba" },
+      { name: "Samuel Eto'o", url: "https://en.wikipedia.org/wiki/Samuel_Eto%27o" },
+      { name: "Roberto Carlos", url: "https://en.wikipedia.org/wiki/Roberto_Carlos_(footballer,_born_1973)" },
+      { name: "Luis Suárez", url: "https://en.wikipedia.org/wiki/Luis_Su%C3%A1rez" },
+      { name: "Eric Cantona", url: "https://en.wikipedia.org/wiki/Eric_Cantona" },
+      { name: "Gary Lineker", url: "https://en.wikipedia.org/wiki/Gary_Lineker" },
+      { name: "Michael Owen", url: "https://en.wikipedia.org/wiki/Michael_Owen" },
+      { name: "Steven Gerrard", url: "https://en.wikipedia.org/wiki/Steven_Gerrard" },
+      { name: "Frank Lampard", url: "https://en.wikipedia.org/wiki/Frank_Lampard" },
+      { name: "Wayne Rooney", url: "https://en.wikipedia.org/wiki/Wayne_Rooney" },
+      { name: "Alan Shearer", url: "https://en.wikipedia.org/wiki/Alan_Shearer" },
+      { name: "Sergio Ramos", url: "https://en.wikipedia.org/wiki/Sergio_Ramos" },
+      { name: "Zlatan Ibrahimović", url: "https://en.wikipedia.org/wiki/Zlatan_Ibrahimovi%C4%87" },
+      { name: "Andriy Shevchenko", url: "https://en.wikipedia.org/wiki/Andriy_Shevchenko" },
+      { name: "Lothar Matthäus", url: "https://en.wikipedia.org/wiki/Lothar_Matth%C3%A4us" },
+      { name: "Ruud Gullit", url: "https://en.wikipedia.org/wiki/Ruud_Gullit" },
+      { name: "Arjen Robben", url: "https://en.wikipedia.org/wiki/Arjen_Robben" },
+      { name: "Clarence Seedorf", url: "https://en.wikipedia.org/wiki/Clarence_Seedorf" },
+      { name: "Fernando Torres", url: "https://en.wikipedia.org/wiki/Fernando_Torres" },
+      { name: "Mario Balotelli", url: "https://en.wikipedia.org/wiki/Mario_Balotelli" },
+      { name: "Carles Puyol", url: "https://en.wikipedia.org/wiki/Carles_Puyol" },
+      { name: "Oliver Kahn", url: "https://en.wikipedia.org/wiki/Oliver_Kahn" },
+      { name: "Patrice Evra", url: "https://en.wikipedia.org/wiki/Patrice_Evra" },
+      { name: "Socrates", url: "https://en.wikipedia.org/wiki/S%C3%B3crates" },
+      { name: "Fabio Cannavaro", url: "https://en.wikipedia.org/wiki/Fabio_Cannavaro" },
+      { name: "Carlos Valderrama", url: "https://en.wikipedia.org/wiki/Carlos_Valderrama" },
+      { name: "Harald Schumacher", url: "https://en.wikipedia.org/wiki/Harald_Schumacher" }
+    ];
+
+    // ==== 2. STADIUMS ====
+    // Add more stadiums as you wish!
+    const stadiums = [
+      { name: "Camp Nou (Barcelona)", url: "https://en.wikipedia.org/wiki/Camp_Nou" },
+      { name: "Wembley Stadium (London)", url: "https://en.wikipedia.org/wiki/Wembley_Stadium" },
+      { name: "Maracanã (Rio de Janeiro)", url: "https://en.wikipedia.org/wiki/Maracan%C3%A3_Stadium" },
+      { name: "San Siro (Milan)", url: "https://en.wikipedia.org/wiki/San_Siro" },
+      { name: "Santiago Bernabéu (Madrid)", url: "https://en.wikipedia.org/wiki/Santiago_Bernab%C3%A9u_Stadium" },
+      { name: "Allianz Arena (Munich)", url: "https://en.wikipedia.org/wiki/Allianz_Arena" },
+      { name: "Old Trafford (Manchester)", url: "https://en.wikipedia.org/wiki/Old_Trafford" },
+      { name: "Signal Iduna Park (Dortmund)", url: "https://en.wikipedia.org/wiki/Westfalenstadion" },
+      { name: "Anfield (Liverpool)", url: "https://en.wikipedia.org/wiki/Anfield" },
+      { name: "La Bombonera (Buenos Aires)", url: "https://en.wikipedia.org/wiki/La_Bombonera" }
+    ];
+
+    // ==== 3. TRIVIA QUESTIONS ====
+    // Trivial Qs with answers
+    const triviaQuestions = [
+      {
+        q: "Who won the 2010 FIFA World Cup?",
+        a: "Spain"
+      },
+      {
+        q: "Which player is known as 'The Divine Ponytail'?",
+        a: "Roberto Baggio"
+      },
+      {
+        q: "Which club has won the most UEFA Champions League titles?",
+        a: "Real Madrid"
+      },
+      {
+        q: "Which country hosted the first FIFA World Cup?",
+        a: "Uruguay"
+      },
+      {
+        q: "Who is the all-time top scorer in the Premier League?",
+        a: "Alan Shearer"
+      },
+      {
+        q: "Name the only player to win the Ballon d'Or, World Cup, and Champions League.",
+        a: "Sir Bobby Charlton"
+      },
+      {
+        q: "Who scored the 'Hand of God' goal?",
+        a: "Diego Maradona"
+      },
+      {
+        q: "Which African nation reached the World Cup quarter finals in 2002?",
+        a: "Senegal"
+      },
+      {
+        q: "Who is known as 'El Fenómeno'?",
+        a: "Ronaldo Nazário"
+      },
+      {
+        q: "What's the maximum number of substitutions per team in a FIFA World Cup knockout match (since 2018)?",
+        a: "Five"
+      }
+    ];
+
+    // ==== 4. GEAR OF THE DAY (Affiliate examples) ====
+    const lifeChangingGear = [
+      {
+        title: "Adidas Uniforia Match Ball",
+        url: "https://www.amazon.com/dp/B07ZQPYJ5Q/?tag=youraffiliatetag" 
+      },
+      {
+        title: "Nike Mercurial Superfly 9",
+        url: "https://www.amazon.com/dp/B0B3TZD66X/?tag=youraffiliatetag" 
+      },
+      {
+        title: "SKLZ Agility Ladder",
+        url: "https://www.amazon.com/dp/B000P7PVW8/?tag=youraffiliatetag" 
+      }
+    ];
+
+    // ==== 5. STUFF YOU DIDN'T KNOW YOU NEED (Funny/affiliate mix) ====
+    const stuffYouDidntKnow = [
+      {
+        title: "Quick-Dry Football Socks",
+        url: "https://www.amazon.com/dp/B013Q158UM/?tag=youraffiliatetag" 
+      },
+      {
+        title: "Portable Pop-Up Soccer Goal",
+        url: "https://www.amazon.com/dp/B00Z8UB6IW/?tag=youraffiliatetag" 
+      },
+      {
+        title: "Football Ice Cube Tray (For Serious Fans)",
+        url: "https://www.amazon.com/dp/B084Z9ZQXM/?tag=youraffiliatetag"
+      }
+    ];
+
+    // ==== 6. FAN GEAR OF THE DAY ====
+    const fanGear = [
+      {
+        title: "Manchester United Home Jersey",
+        url: "https://www.amazon.com/dp/B0C5G1X8FP/?tag=youraffiliatetag"
+      },
+      {
+        title: "Liverpool FC Scarf",
+        url: "https://www.amazon.com/dp/B01LYLC61E/?tag=youraffiliatetag"
+      },
+      {
+        title: "FC Barcelona Cap",
+        url: "https://www.amazon.com/dp/B01GZZ8SXE/?tag=youraffiliatetag"
+      }
+    ];
+
+    // ==== RENDER ALL SECTIONS ====
+    document.addEventListener("DOMContentLoaded", function() {
+      // Date and Day
+      const today = new Date();
+      const days = ["SUNDAY", "MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY", "SATURDAY"];
+      document.getElementById("date").textContent =
+        today.toLocaleDateString('en-US', { month: 'long', day: 'numeric', year: 'numeric' });
+      document.getElementById("fucking-day").textContent = `IT'S FUCKING ${days[today.getDay()]}.`;
+
+      // Legends
+      const legend = pickDailyRandom(footballLegends, 'legend');
+      document.getElementById('legend').innerHTML = legend
+        ? `<a href="${legend.url}" target="_blank">${legend.name}</a>`
+        : "(add more legends!)";
+
+      // Stadiums
+      const stadium = pickDailyRandom(stadiums, 'stadium');
+      document.getElementById('stadium').innerHTML = stadium
+        ? `<a href="${stadium.url}" target="_blank">${stadium.name}</a>`
+        : "(add more stadiums!)";
+
+      // Trivia with reveal button
+      const triviaObj = pickDailyRandom(triviaQuestions, 'trivia');
+      if (triviaObj) {
+        const triviaDiv = document.getElementById('trivia');
+        triviaDiv.innerHTML = `${triviaObj.q} <button id="showTrivia">Show Answer</button> <span id="triviaA" style="display:none; margin-left:12px; font-weight:bold; color:#008300">${triviaObj.a}</span>`;
+        document.getElementById('showTrivia').onclick = () => {
+          document.getElementById('triviaA').style.display = "inline";
+          document.getElementById('showTrivia').disabled = true;
+        };
+      } else {
+        document.getElementById('trivia').textContent = "(add more trivia!)";
+      }
+
+      // Life-Changing Gear (affiliate)
+      const gear = pickDailyRandom(lifeChangingGear, 'gear');
+      document.getElementById('gear').innerHTML = gear
+        ? `${gear.title} <a href="${gear.url}" target="_blank">more&gt;&gt;</a>`
+        : "(add more gear!)";
+
+      // Stuff you didn't know you need
+      const stuff = pickDailyRandom(stuffYouDidntKnow, 'stuff');
+      document.getElementById('stuff').innerHTML = stuff
+        ? `${stuff.title} <a href="${stuff.url}" target="_blank">more&gt;&gt;</a>`
+        : "(add more stuff!)";
+
+      // Fan Gear
+      const fan = pickDailyRandom(fanGear, 'fan');
+      document.getElementById('fangear').innerHTML = fan
+        ? `${fan.title} <a href="${fan.url}" target="_blank">more&gt;&gt;</a>`
+        : "(add more fan gear!)";
+    });
+  </script>
+</body>
+</html>
