--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
     .category { margin: 0 auto 2.5rem auto; max-width: 620px; background: #fff; box-shadow:0 4px 16px 0 rgba(0,0,0,0.03); border-radius:8px; padding: 18px 30px;}
     .label { color: #b17d16; font-size:0.94em; }
     a { color: #1771d6; text-decoration:underline; }
+    .day-nav { margin: 0 auto; max-width: 650px; text-align: center; margin-bottom:1.5rem; }
+    .day-link {
+      display: inline-block; margin:0 16px; background: #f5f5f5; border-radius: 6px;
+      padding: 6px 18px; text-decoration: none; color: #845400; font-weight:600; border: 1px solid #dec48e; font-size: 1em; transition: background 0.15s;
+    }
+    .day-link:hover { background: #fbe9d0; }
+    .today-label { color:#bbb; font-size: 0.97em; }
     @media (max-width: 700px) {
-      .category { max-width: 98vw; padding: 12px 2vw; }
+      .category, .day-nav { max-width: 98vw; padding: 12px 2vw; }
     }
   </style>
 </head>
 <body>
+  <div class="day-nav" id="dayNav"></div>
   <h1 id="date"></h1>
   <h2 id="fucking-day"></h2>
-
   <div class="category">
     <div class="label">FOOTBALL LEGEND OF THE DAY:</div>
     <div id="legend"></div>
@@ -44,13 +51,26 @@
     <div class="label">FAN GEAR OF THE DAY:</div>
     <div id="fangear"></div>
   </div>
-
   <script>
-    // --- DETERMINISTIC PICKER ---
-    function pickDailyRandom(arr, category) {
+    // --- URL Day Offset ---
+    function getDayOffset() {
+      const params = new URLSearchParams(location.search);
+      const d = parseInt(params.get('d'), 10);
+      if (isNaN(d)) return 0;
+      return d;
+    }
+    // --- Get the correct date for offset ---
+    function getDateForOffset(offset) {
+      const now = new Date();
+      // Always strip to local midnight for full day matching
+      now.setHours(0,0,0,0);
+      now.setDate(now.getDate() + offset);
+      return now;
+    }
+    // --- DETERMINISTIC PICKER (now takes day parameter) ---
+    function pickDailyRandom(arr, category, date) {
       if (arr.length === 0) return null;
-      const today = new Date();
-      const dateStr = today.getFullYear() + String(today.getMonth()+1).padStart(2, '0') + String(today.getDate()).padStart(2, '0');
+      const dateStr = date.getFullYear() + String(date.getMonth()+1).padStart(2, '0') + String(date.getDate()).padStart(2, '0');
       let hash = 0;
       const seed = category + dateStr;
       for (let i = 0; i < seed.length; i++) {
@@ -60,7 +80,6 @@
       const idx = Math.abs(hash) % arr.length;
       return arr[idx];
     }
-
     // ==== 1. FOOTBALL LEGENDS ====
     const footballLegends = [
       { name: "Pelé", url: "https://en.wikipedia.org/wiki/Pel%C3%A9" },
@@ -114,9 +133,7 @@
       { name: "Carlos Valderrama", url: "https://en.wikipedia.org/wiki/Carlos_Valderrama" },
       { name: "Harald Schumacher", url: "https://en.wikipedia.org/wiki/Harald_Schumacher" }
     ];
-
     // ==== 2. STADIUMS ====
-    // Add more stadiums as you wish!
     const stadiums = [
       { name: "Camp Nou (Barcelona)", url: "https://en.wikipedia.org/wiki/Camp_Nou" },
       { name: "Wembley Stadium (London)", url: "https://en.wikipedia.org/wiki/Wembley_Stadium" },
@@ -129,9 +146,7 @@
       { name: "Anfield (Liverpool)", url: "https://en.wikipedia.org/wiki/Anfield" },
       { name: "La Bombonera (Buenos Aires)", url: "https://en.wikipedia.org/wiki/La_Bombonera" }
     ];
-
     // ==== 3. TRIVIA QUESTIONS ====
-    // Trivial Qs with answers
     const triviaQuestions = [
       {
         q: "Who won the 2010 FIFA World Cup?",
@@ -174,39 +189,36 @@
         a: "Five"
       }
     ];
-
     // ==== 4. GEAR OF THE DAY (Affiliate examples) ====
     const lifeChangingGear = [
       {
         title: "Adidas Uniforia Match Ball",
-        url: "https://www.amazon.com/dp/B07ZQPYJ5Q/?tag=youraffiliatetag" 
+        url: "https://www.amazon.com/dp/B07ZQPYJ5Q/?tag=youraffiliatetag"
       },
       {
         title: "Nike Mercurial Superfly 9",
-        url: "https://www.amazon.com/dp/B0B3TZD66X/?tag=youraffiliatetag" 
+        url: "https://www.amazon.com/dp/B0B3TZD66X/?tag=youraffiliatetag"
       },
       {
         title: "SKLZ Agility Ladder",
-        url: "https://www.amazon.com/dp/B000P7PVW8/?tag=youraffiliatetag" 
+        url: "https://www.amazon.com/dp/B000P7PVW8/?tag=youraffiliatetag"
       }
     ];
-
-    // ==== 5. STUFF YOU DIDN'T KNOW YOU NEED (Funny/affiliate mix) ====
+    // ==== 5. STUFF YOU DIDN'T KNOW YOU NEED ====
     const stuffYouDidntKnow = [
       {
         title: "Quick-Dry Football Socks",
-        url: "https://www.amazon.com/dp/B013Q158UM/?tag=youraffiliatetag" 
+        url: "https://www.amazon.com/dp/B013Q158UM/?tag=youraffiliatetag"
       },
       {
         title: "Portable Pop-Up Soccer Goal",
-        url: "https://www.amazon.com/dp/B00Z8UB6IW/?tag=youraffiliatetag" 
+        url: "https://www.amazon.com/dp/B00Z8UB6IW/?tag=youraffiliatetag"
       },
       {
         title: "Football Ice Cube Tray (For Serious Fans)",
         url: "https://www.amazon.com/dp/B084Z9ZQXM/?tag=youraffiliatetag"
       }
     ];
-
     // ==== 6. FAN GEAR OF THE DAY ====
     const fanGear = [
       {
@@ -225,27 +237,42 @@
 
     // ==== RENDER ALL SECTIONS ====
     document.addEventListener("DOMContentLoaded", function() {
+      // Get offset
+      const offset = getDayOffset();
+      const thisDate = getDateForOffset(offset);
+
+      // Previous and Next navigation
+      let navHtml = '';
+      navHtml += `<a class="day-link" href="?d=${offset-1}">&#8592; Previous Day</a> `;
+      if (offset < 0) {
+        if (offset == -1) {
+          navHtml += `<span class="today-label">(Yesterday)</span>`;
+        }
+        navHtml += `<a class="day-link" href="${location.pathname}">Today</a> `;
+        navHtml += `<a class="day-link" href="?d=${offset+1}">Next Day &#8594;</a>`;
+      } else {
+        navHtml += `<span class="today-label">(Today)</span>`;
+      }
+      document.getElementById("dayNav").innerHTML = navHtml;
+
       // Date and Day
-      const today = new Date();
       const days = ["SUNDAY", "MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY", "SATURDAY"];
       document.getElementById("date").textContent =
-        today.toLocaleDateString('en-US', { month: 'long', day: 'numeric', year: 'numeric' });
-      document.getElementById("fucking-day").textContent = `IT'S FUCKING ${days[today.getDay()]}.`;
+        thisDate.toLocaleDateString('en-US', { month: 'long', day: 'numeric', year: 'numeric' });
+      document.getElementById("fucking-day").textContent = `IT'S FUCKING ${days[thisDate.getDay()]}.`;
 
       // Legends
-      const legend = pickDailyRandom(footballLegends, 'legend');
+      const legend = pickDailyRandom(footballLegends, 'legend', thisDate);
       document.getElementById('legend').innerHTML = legend
         ? `<a href="${legend.url}" target="_blank">${legend.name}</a>`
         : "(add more legends!)";
-
       // Stadiums
-      const stadium = pickDailyRandom(stadiums, 'stadium');
+      const stadium = pickDailyRandom(stadiums, 'stadium', thisDate);
       document.getElementById('stadium').innerHTML = stadium
         ? `<a href="${stadium.url}" target="_blank">${stadium.name}</a>`
         : "(add more stadiums!)";
-
       // Trivia with reveal button
-      const triviaObj = pickDailyRandom(triviaQuestions, 'trivia');
+      const triviaObj = pickDailyRandom(triviaQuestions, 'trivia', thisDate);
       if (triviaObj) {
         const triviaDiv = document.getElementById('trivia');
         triviaDiv.innerHTML = `${triviaObj.q} <button id="showTrivia">Show Answer</button> <span id="triviaA" style="display:none; margin-left:12px; font-weight:bold; color:#008300">${triviaObj.a}</span>`;
@@ -256,21 +283,18 @@
       } else {
         document.getElementById('trivia').textContent = "(add more trivia!)";
       }
-
       // Life-Changing Gear (affiliate)
-      const gear = pickDailyRandom(lifeChangingGear, 'gear');
+      const gear = pickDailyRandom(lifeChangingGear, 'gear', thisDate);
       document.getElementById('gear').innerHTML = gear
         ? `${gear.title} <a href="${gear.url}" target="_blank">more&gt;&gt;</a>`
         : "(add more gear!)";
-
       // Stuff you didn't know you need
-      const stuff = pickDailyRandom(stuffYouDidntKnow, 'stuff');
+      const stuff = pickDailyRandom(stuffYouDidntKnow, 'stuff', thisDate);
       document.getElementById('stuff').innerHTML = stuff
         ? `${stuff.title} <a href="${stuff.url}" target="_blank">more&gt;&gt;</a>`
         : "(add more stuff!)";
-
       // Fan Gear
-      const fan = pickDailyRandom(fanGear, 'fan');
+      const fan = pickDailyRandom(fanGear, 'fan', thisDate);
       document.getElementById('fangear').innerHTML = fan
         ? `${fan.title} <a href="${fan.url}" target="_blank">more&gt;&gt;</a>`
         : "(add more fan gear!)";
