--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Football Fucking Homepage</title>
+  <title>The Beautiful Game Daily</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <style>
@@ -243,7 +243,7 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="site-name">Football Fucking Homepage</div>
+    <div class="site-name">The Beautiful Game Daily</div>
     <div class="site-ball" title="football">
       <svg fill="#fff" width="32" height="32" viewBox="0 0 48 48"><circle cx="24" cy="24" r="22" fill="#fff"/><circle cx="24" cy="24" r="18" fill="none" stroke="#108f46" stroke-width="2"/><circle cx="24" cy="24" r="7" fill="#108f46" stroke="#175c2f" stroke-width="2"/><path d="M24 17 l-5 -7 M24 17 l5 -7 M24 31 l-5 7 M24 31 l5 7 M17 24 l-7 -5 M17 24 l-7 5 M31 24 l7 -5 M31 24 l7 5" stroke="#108f46" stroke-width="2" fill="none"/></svg>
     </div>
