--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@700&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <title>The Beautiful Game Daily</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -25,7 +25,7 @@
       box-shadow: 0 2px 14px 0 rgba(17,143,70,.10);
     }
     .site-name {
-      font-family: 'Noto Serif JP', serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       font-size: 1.7rem;
       font-weight: 700;
       letter-spacing: 0.02em;
@@ -46,7 +46,7 @@
       border-bottom: 3px solid #f9be00;
     }
     .hero-date {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       font-size: 2.5rem;
       font-weight: 700;
       letter-spacing: 0.04em;
@@ -55,13 +55,13 @@
     .hero-day {
       font-size: 1.2rem;
       margin-bottom: 0.20em;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       font-weight: 500;
     }
     .hero-countdown {
       margin-top: 0.25em;
       font-size: 1.28em;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       color: #f9be00;
       font-weight:bold;
       letter-spacing:0.01em;
@@ -101,7 +101,7 @@
       min-width: 0;
     }
     .card-label {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       background: #108f46;
       color: #fff;
       font-size: 0.92em;
@@ -119,7 +119,7 @@
       color: #140e02;
     }
     .card-title {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       font-size: 1.3em;
       font-weight: 700;
       color: #1B5E20;
@@ -154,7 +154,7 @@
     .buy-btn {
       margin-top: 1.5em;
       display: inline-block;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       background: #108f46;
       color: #fff;
       font-size: 1.08em;
@@ -196,7 +196,7 @@
       background: #108f46;
       color: #fff;
       border: none;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Kedebideri', cursive, sans-serif;
       font-size: 1.03em;
       padding: 9px 21px;
       border-radius: 7px;
@@ -222,7 +222,7 @@
     }
     .day-link {
       display: inline-block; margin:0 19px; background: #e4f8e9; border-radius: 6px;
-      padding: 9px 18px; text-decoration: none; color: #108f46; font-family: 'Montserrat', sans-serif; font-weight:600; border: 1.5px solid #108f46; font-size: 1.1em; transition: background 0.15s;
+      padding: 9px 18px; text-decoration: none; color: #108f46; font-family: 'Kedebideri', cursive, sans-serif; font-weight:600; border: 1.5px solid #108f46; font-size: 1.1em; transition: background 0.15s;
     }
     .day-link:hover { background: #aed7bc; }
     .today-label { color:#bbb; font-size: 0.97em; }
