--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   </div>
   <div class="mid-row">
     <div class="card">
-      <div class="card-label">Trivia</div>
+      <div class="card-label">Trivia of the Day</div>
       <div class="card-title" id="trivia-title"></div>
       <button class="trivia-btn" id="showTrivia">Show Answer</button>
       <div class="trivia-answer" id="triviaA"></div>
@@ -287,7 +287,7 @@
   </div>
   <div class="bottom-row">
     <div class="card">
-      <div class="card-label gold">Life-Changing Gear</div>
+      <div class="card-label gold">Life-Changing Gear of the Day</div>
       <div class="card-title" id="gear-title"></div>
       <div class="card-desc" id="gear-desc"></div>
       <a id="gear-link" class="buy-btn" target="_blank">Buy Now</a>
@@ -299,7 +299,7 @@
       <a id="stuff-link" class="buy-btn" target="_blank">Buy Now</a>
     </div>
     <div class="card">
-      <div class="card-label gold">Fan Gear</div>
+      <div class="card-label gold">Fan Gear of the Day</div>
       <div class="card-title" id="fan-title"></div>
       <div class="card-desc" id="fan-desc"></div>
       <a id="fan-link" class="buy-btn" target="_blank">Buy Now</a>
