--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
         loadData('legends.json'),
         loadData('stadiums.json'),
         loadData('trivia.json'),
-        loadData('lifechanging_links.json'),
-        loadData('favoritefind_links.json'),
-        loadData('fangear_links.json')
+        loadData('links_lifechanging.json'),
+        loadData('links_favoritefind.json'),
+        loadData('links_fangear.json')
       ]).catch(e=>{
         alert("Error loading data: " + e.message);
         return [[],[],[],[],[],[]];
